# DarkStar

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h
models/: training_stats.json
resources/: CMakeLists.txt
